First commited as before_46261_rev2