@@ -42,6 +42,11 @@
  */
 package org.eclipse.jgit.transport.http.apache;
 
+import static org.eclipse.jgit.util.HttpSupport.METHOD_GET;
+import static org.eclipse.jgit.util.HttpSupport.METHOD_HEAD;
+import static org.eclipse.jgit.util.HttpSupport.METHOD_POST;
+import static org.eclipse.jgit.util.HttpSupport.METHOD_PUT;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -75,18 +80,21 @@ import org.apache.http.HttpHost;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.ClientProtocolException;
 import org.apache.http.client.HttpClient;
+import org.apache.http.client.config.RequestConfig;
 import org.apache.http.client.methods.HttpGet;
+import org.apache.http.client.methods.HttpHead;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.client.methods.HttpPut;
 import org.apache.http.client.methods.HttpUriRequest;
-import org.apache.http.client.params.ClientPNames;
-import org.apache.http.conn.params.ConnRoutePNames;
-import org.apache.http.conn.scheme.Scheme;
-import org.apache.http.conn.ssl.SSLSocketFactory;
+import org.apache.http.config.Registry;
+import org.apache.http.config.RegistryBuilder;
+import org.apache.http.conn.socket.ConnectionSocketFactory;
+import org.apache.http.conn.socket.PlainConnectionSocketFactory;
+import org.apache.http.conn.ssl.SSLConnectionSocketFactory;
 import org.apache.http.conn.ssl.X509HostnameVerifier;
-import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.params.CoreConnectionPNames;
-import org.apache.http.params.HttpParams;
+import org.apache.http.impl.client.HttpClientBuilder;
+import org.apache.http.impl.client.HttpClients;
+import org.apache.http.impl.conn.BasicHttpClientConnectionManager;
 import org.eclipse.jgit.transport.http.HttpConnection;
 import org.eclipse.jgit.transport.http.apache.internal.HttpApacheText;
 import org.eclipse.jgit.util.TemporaryBuffer;
@@ -100,7 +108,7 @@ import org.eclipse.jgit.util.TemporaryBuffer.LocalFile;
 public class HttpClientConnection implements HttpConnection {
 	HttpClient client;
 
-	String urlStr;
+	URL url;
 
 	HttpUriRequest req;
 
@@ -125,29 +133,39 @@ public class HttpClientConnection implements HttpConnection {
 	SSLContext ctx;
 
 	private HttpClient getClient() {
-		if (client == null)
-			client = new DefaultHttpClient();
-		HttpParams params = client.getParams();
-		if (proxy != null && !Proxy.NO_PROXY.equals(proxy)) {
-			isUsingProxy = true;
-			InetSocketAddress adr = (InetSocketAddress) proxy.address();
-			params.setParameter(ConnRoutePNames.DEFAULT_PROXY,
-					new HttpHost(adr.getHostName(), adr.getPort()));
-		}
-		if (timeout != null)
-			params.setIntParameter(CoreConnectionPNames.CONNECTION_TIMEOUT,
-					timeout.intValue());
-		if (readTimeout != null)
-			params.setIntParameter(CoreConnectionPNames.SO_TIMEOUT,
-					readTimeout.intValue());
-		if (followRedirects != null)
-			params.setBooleanParameter(ClientPNames.HANDLE_REDIRECTS,
-					followRedirects.booleanValue());
-		if (hostnameverifier != null) {
-			SSLSocketFactory sf;
-			sf = new SSLSocketFactory(getSSLContext(), hostnameverifier);
-			Scheme https = new Scheme("https", 443, sf); //$NON-NLS-1$
-			client.getConnectionManager().getSchemeRegistry().register(https);
+		if (client == null) {
+			HttpClientBuilder clientBuilder = HttpClients.custom();
+			RequestConfig.Builder configBuilder = RequestConfig.custom();
+			if (proxy != null && !Proxy.NO_PROXY.equals(proxy)) {
+				isUsingProxy = true;
+				InetSocketAddress adr = (InetSocketAddress) proxy.address();
+				clientBuilder.setProxy(
+						new HttpHost(adr.getHostName(), adr.getPort()));
+			}
+			if (timeout != null) {
+				configBuilder.setConnectTimeout(timeout.intValue());
+			}
+			if (readTimeout != null) {
+				configBuilder.setSocketTimeout(readTimeout.intValue());
+			}
+			if (followRedirects != null) {
+				configBuilder
+						.setRedirectsEnabled(followRedirects.booleanValue());
+			}
+			if (hostnameverifier != null) {
+				SSLConnectionSocketFactory sslConnectionFactory = new SSLConnectionSocketFactory(
+						getSSLContext(), hostnameverifier);
+				clientBuilder.setSSLSocketFactory(sslConnectionFactory);
+				Registry<ConnectionSocketFactory> registry = RegistryBuilder
+						.<ConnectionSocketFactory> create()
+						.register("https", sslConnectionFactory)
+						.register("http", PlainConnectionSocketFactory.INSTANCE)
+						.build();
+				clientBuilder.setConnectionManager(
+						new BasicHttpClientConnectionManager(registry));
+			}
+			clientBuilder.setDefaultRequestConfig(configBuilder.build());
+			client = clientBuilder.build();
 		}
 
 		return client;
@@ -176,16 +194,19 @@ public class HttpClientConnection implements HttpConnection {
 
 	/**
 	 * @param urlStr
+	 * @throws MalformedURLException
 	 */
-	public HttpClientConnection(String urlStr) {
+	public HttpClientConnection(String urlStr) throws MalformedURLException {
 		this(urlStr, null);
 	}
 
 	/**
 	 * @param urlStr
 	 * @param proxy
+	 * @throws MalformedURLException
 	 */
-	public HttpClientConnection(String urlStr, Proxy proxy) {
+	public HttpClientConnection(String urlStr, Proxy proxy)
+			throws MalformedURLException {
 		this(urlStr, proxy, null);
 	}
 
@@ -193,10 +214,12 @@ public class HttpClientConnection implements HttpConnection {
 	 * @param urlStr
 	 * @param proxy
 	 * @param cl
+	 * @throws MalformedURLException
 	 */
-	public HttpClientConnection(String urlStr, Proxy proxy, HttpClient cl) {
+	public HttpClientConnection(String urlStr, Proxy proxy, HttpClient cl)
+			throws MalformedURLException {
 		this.client = cl;
-		this.urlStr = urlStr;
+		this.url = new URL(urlStr);
 		this.proxy = proxy;
 	}
 
@@ -206,11 +229,7 @@ public class HttpClientConnection implements HttpConnection {
 	}
 
 	public URL getURL() {
-		try {
-			return new URL(urlStr);
-		} catch (MalformedURLException e) {
-			return null;
-		}
+		return url;
 	}
 
 	public String getResponseMessage() throws IOException {
@@ -219,17 +238,25 @@ public class HttpClientConnection implements HttpConnection {
 	}
 
 	private void execute() throws IOException, ClientProtocolException {
-		if (resp == null)
-			if (entity != null) {
-				if (req instanceof HttpEntityEnclosingRequest) {
-					HttpEntityEnclosingRequest eReq = (HttpEntityEnclosingRequest) req;
-					eReq.setEntity(entity);
-				}
-				resp = getClient().execute(req);
-				entity.getBuffer().close();
-				entity = null;
-			} else
-				resp = getClient().execute(req);
+		if (resp != null) {
+			return;
+		}
+
+		if (entity == null) {
+			resp = getClient().execute(req);
+			return;
+		}
+
+		try {
+			if (req instanceof HttpEntityEnclosingRequest) {
+				HttpEntityEnclosingRequest eReq = (HttpEntityEnclosingRequest) req;
+				eReq.setEntity(entity);
+			}
+			resp = getClient().execute(req);
+		} finally {
+			entity.close();
+			entity = null;
+		}
 	}
 
 	public Map<String, List<String>> getHeaderFields() {
@@ -249,13 +276,15 @@ public class HttpClientConnection implements HttpConnection {
 
 	public void setRequestMethod(String method) throws ProtocolException {
 		this.method = method;
-		if ("GET".equalsIgnoreCase(method)) //$NON-NLS-1$
-			req = new HttpGet(urlStr);
-		else if ("PUT".equalsIgnoreCase(method)) //$NON-NLS-1$
-			req = new HttpPut(urlStr);
-		else if ("POST".equalsIgnoreCase(method)) //$NON-NLS-1$
-			req = new HttpPost(urlStr);
-		else {
+		if (METHOD_GET.equalsIgnoreCase(method)) {
+			req = new HttpGet(url.toString());
+		} else if (METHOD_HEAD.equalsIgnoreCase(method)) {
+			req = new HttpHead(url.toString());
+		} else if (METHOD_PUT.equalsIgnoreCase(method)) {
+			req = new HttpPut(url.toString());
+		} else if (METHOD_POST.equalsIgnoreCase(method)) {
+			req = new HttpPost(url.toString());
+		} else {
 			this.method = null;
 			throw new UnsupportedOperationException();
 		}
@@ -266,11 +295,11 @@ public class HttpClientConnection implements HttpConnection {
 	}
 
 	public void setConnectTimeout(int timeout) {
-		this.timeout = new Integer(timeout);
+		this.timeout = Integer.valueOf(timeout);
 	}
 
 	public void setReadTimeout(int readTimeout) {
-		this.readTimeout = new Integer(readTimeout);
+		this.readTimeout = Integer.valueOf(readTimeout);
 	}
 
 	public String getContentType() {
@@ -294,12 +323,21 @@ public class HttpClientConnection implements HttpConnection {
 	}
 
 	public int getContentLength() {
-		return Integer.parseInt(resp.getFirstHeader("content-length") //$NON-NLS-1$
-				.getValue());
+		Header contentLength = resp.getFirstHeader("content-length"); //$NON-NLS-1$
+		if (contentLength == null) {
+			return -1;
+		}
+
+		try {
+			int l = Integer.parseInt(contentLength.getValue());
+			return l < 0 ? -1 : l;
+		} catch (NumberFormatException e) {
+			return -1;
+		}
 	}
 
 	public void setInstanceFollowRedirects(boolean followRedirects) {
-		this.followRedirects = new Boolean(followRedirects);
+		this.followRedirects = Boolean.valueOf(followRedirects);
 	}
 
 	public void setDoOutput(boolean dooutput) {
